--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -594,7 +594,7 @@ In reconstruction, we start from a test data sample, encode it to get a latent s
 20. Tables III and IV. ``200D Gaussian'' is placed such that it was used only for DAAE, moreover in the following tables ``200D Gaussian'' is repeated for each row
 }
 
-{\color{red} NEED TO UPDATE PAPER: For these experiments we use the same prior and so we now put this information in the caption as well as in the model description and remove it from the table.}
+{\color{red} NEED TO UPDATE PAPER: For these experiments we use the same prior and so in the revised version of our paper we put this information in the caption as well as in the model description and remove it from the table.}
 
 
 21. Section VI.D.1. It would be better to have more discussion about why the performance on MNIST of the proposed methods is worse than AAE's.
